2000-06-15  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml-properties.c (gtk_html_class_properties_load): use val
	== NULL test instead of !dflt

	* keybindingsrc.emacs: same as in keybindingsrc.ms

2000-06-14  Radek Doulik  <rodo@helixcode.com>

	* keybindingsrc.ms: paragraph styles binded to Ctrl 1..8 + 0 and
	Ctrl-Alt 1..3

	* gtkhtml.c: more keybindings - paragraph styles

	* Makefile.am (testgtkhtml_LDADD): removed -lgconf-gtk which was
	hack and is fixed now

	* testgtkhtml.c (main): call gtkhtmllib_init

        keybindings support + gtkhtml config capplet using gconf
	
	* gtkhtml.c (key_press_event): so, finnaly insert everything which
	nas state not containing Ctrl,Alt
	(gtkhtmllib_init): new function, please call it before using
	gtkhtml widget (we need this for gconf init)

2000-06-12  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlclueflow.c (save_plain): For indented paragraphs, emit as
	many tabs as the level of indentation before the actual contents.

2000-06-12  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (key_press_event): insert text also with LOCK_MASK bit
	turned on
	(key_press_event): queue draw + update style every time we handle key_press

2000-06-12  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlclueflow.c (get_tag_for_item_group): Removed.
	(save): Don't use it anymore.  This will make us produce somewhat
	invalid HTML, but at least indentation will look right.

	* htmlengine.c (html_engine_queue_clear): Call
	`html_colorset_get_color_allocated' instead of
	`html_colorset_get_color', so that we get an allocated color.
	This fixes the "black box when deleting" bug.

	* htmlengine.h: Remove `bDrawBackground' from `HTMLEngine'.  It
	was not being used anywhere.

	* htmlclueflow.c (calc_size): Remove all the text slaves before
	doing anything else.
	(get_pre_padding): New.
	(add_pre_padding): Rewritten to use it.
	(get_post_padding): New.
	(add_post_padding): Rewritten to use it.